compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TopLevelDestructuring.kt
// TopLevelDestructuringKt
data class Pair(konst x: Int, konst y: Int)

konst (x, y) = Pair(1, 2)

konst z = { 3 }()
